--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -96,24 +96,9 @@
                             <Button Content="{x:Static properties:Resources.ParsingManagement}" Click="Button_Click_1" Margin="0,0,5,0"/>
                             <Button Content="{x:Static properties:Resources.PreprocessManager}" Click="Button_Click_PreProcess"/>
                         </StackPanel>
-
-                        <StackPanel Margin="0,0,0,5"  Orientation="Horizontal">
-                            <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
-                                <Button Content="x64" Command="{Binding FlowEngineManager.WindowsServiceX64.OpenLogCommand}"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
-                                <Button Content="dev" Command="{Binding FlowEngineManager.WindowsServiceDev.OpenLogCommand}"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
-                                <Button Content="RC" Command="{Binding FlowEngineManager.WindowsServiceReg.OpenLogCommand}"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Horizontal">
-                                <Button Content="Camera" Command="{Binding FlowEngineManager.OpenCameraLogCommand}"/>
-                            </StackPanel>
-                        </StackPanel>
                     </StackPanel>
                 </StackPanel>
-                <ListView x:Name="NodeListView" Grid.Column="2" Height="140" BorderThickness="0" Background="Transparent"  SelectionChanged="NodeListView_SelectionChanged" ItemsSource="{Binding FlowEngineManager.CVBaseServerNodes}">
+                <ListView x:Name="NodeListView" Grid.Column="2" Height="110" Padding="0" BorderThickness="0" Background="Transparent"  SelectionChanged="NodeListView_SelectionChanged" ItemsSource="{Binding FlowEngineManager.CVBaseServerNodes}">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource ListViewItemBaseStyle.Small}" >
                         </Style>
@@ -146,6 +131,20 @@
                     <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="35">
                         <Button Content="{x:Static properties:Resources.ExecutionProcess}"  x:Name="ButtonRun" Visibility="{Binding FlowEngineManager.FlowControl.IsFlowRun,Converter={StaticResource bool2VisibilityConverter1}}" FontWeight="Bold" FontSize="16" Click="Button_FlowRun_Click" />
                         <Button Content="{x:Static properties:Resources.StopProcess}"  x:Name="ButtonStop" Visibility="{Binding FlowEngineManager.FlowControl.IsFlowRun,Converter={StaticResource bool2VisibilityConverter}}" FontWeight="Bold" FontSize="16" Click="Button_FlowStop_Click" />
+                    </StackPanel>
+                    <StackPanel  Grid.Row="1" VerticalAlignment="Bottom" Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
+                            <Button Content="x64" Command="{Binding FlowEngineManager.WindowsServiceX64.OpenLogCommand}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
+                            <Button Content="dev" Command="{Binding FlowEngineManager.WindowsServiceDev.OpenLogCommand}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
+                            <Button Content="RC" Command="{Binding FlowEngineManager.WindowsServiceReg.OpenLogCommand}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Button Content="Camera" Command="{Binding FlowEngineManager.OpenCameraLogCommand}"/>
+                        </StackPanel>
                     </StackPanel>
                 </Grid>
 
