--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -150,15 +150,15 @@
                     <Border Grid.Column="1" Background="{DynamicResource GlobalBorderBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1"  Margin="0,5" CornerRadius="5">
                         <StackPanel Margin="5">
                             <DockPanel Margin="0,0,0,5">
-                                <ui:ToggleSwitch IsChecked="{Binding Config.IsLayoutUpdated}" DockPanel.Dock="Right" />
+                                <ui:ToggleSwitch IsChecked="{Binding Config.IsLayoutUpdated}" Background="DodgerBlue"  DockPanel.Dock="Right" />
                                 <TextBlock Text="{x:Static properties:Resources.IsLayoutUpdated}" Width="100" HorizontalAlignment="Left"/>
                             </DockPanel>
                             <DockPanel Margin="0,0,0,5">
-                                <ui:ToggleSwitch IsChecked="{Binding Config.IsShowText}" DockPanel.Dock="Right" />
+                                <ui:ToggleSwitch IsChecked="{Binding Config.IsShowText}" Background="DodgerBlue" DockPanel.Dock="Right" />
                                 <TextBlock Text="{x:Static properties:Resources.IsShowText}" Width="100" HorizontalAlignment="Left"/>
                             </DockPanel>
                             <DockPanel Margin="0,0,0,5">
-                                <ui:ToggleSwitch IsChecked="{Binding Config.IsShowMsg}" DockPanel.Dock="Right" />
+                                <ui:ToggleSwitch IsChecked="{Binding Config.IsShowMsg}" Background="DodgerBlue" DockPanel.Dock="Right" />
                                 <TextBlock Text="{x:Static properties:Resources.IsShowMsg}" Width="100" HorizontalAlignment="Left"/>
                             </DockPanel>
                             <DockPanel Margin="0,0,0,5">
