--- a/UI/ColorVision.Themes/Themes/Base.xaml
+++ b/UI/ColorVision.Themes/Themes/Base.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converter ="clr-namespace:ColorVision.Themes.Converter"
                     x:Class="ColorVision.Themes.BaseEvent"
+                    xmlns:ui ="http://schemas.lepo.co/wpfui/2022/xaml"
                     >
 
     <SolidColorBrush x:Key="DarkDefaultBrush"  Color="#55326CF3" />
@@ -15,7 +16,6 @@
     <converter:EnumToVisibilityConverter x:Key="enum2VisibilityConverter"/>
     <converter:EnumToVisibilityReConverter x:Key="enum2VisibilityConverter1"/>
     <converter:IntToVisibilityConverter x:Key="int2VisibilityConverter"/>
-    
     <Style TargetType="{x:Type AccessText}">
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True" />
