--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -149,6 +149,7 @@
 
                     <Border Grid.Column="1" Background="{DynamicResource GlobalBorderBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1"  Margin="0,5" CornerRadius="5">
                         <StackPanel Margin="5">
+                            <Button Content="Clear" Command="{Binding Config.ClearCommand}" />
                             <DockPanel Margin="0,0,0,5">
                                 <ui:ToggleSwitch IsChecked="{Binding Config.IsLayoutUpdated}" Background="DodgerBlue"  DockPanel.Dock="Right" />
                                 <TextBlock Text="{x:Static properties:Resources.IsLayoutUpdated}" Width="100" HorizontalAlignment="Left"/>
