--- a/Projects/ProjectStarkSemi/MVSViewWindow.xaml
+++ b/Projects/ProjectStarkSemi/MVSViewWindow.xaml
@@ -74,7 +74,7 @@
                 </StackPanel>
 
                     <DockPanel Margin="0,0,0,5">
-                        <TextBox DockPanel.Dock="Right" Width="120"  Style="{StaticResource TextBox.Small}"  Text="{Binding Config.Exposure,StringFormat=F1}" TextChanged="tbExposure_TextChanged"/>
+                        <TextBox DockPanel.Dock="Right" Width="120"  Style="{StaticResource TextBox.Small}"  Text="{Binding Config.Exposure,StringFormat=F1}" LostFocus="TextBox_LostFocus"/>
                         <TextBlock x:Name="label1" Text="曝光(ms)" />
                     </DockPanel>
                 <DockPanel Margin="0,0,0,5">
@@ -82,7 +82,7 @@
                     <TextBlock x:Name="label2" Text="增益"/>
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <TextBox x:Name="tbFrameRate" IsReadOnly="True" BorderThickness="0" DockPanel.Dock="Right" Width="150" IsEnabled="False" Style="{StaticResource TextBox.Small}" TextChanged="tbFrameRate_TextChanged"/>
+                    <TextBox x:Name="tbFrameRate"  DockPanel.Dock="Right" Width="120"  Style="{StaticResource TextBox.Small}" TextChanged="tbFrameRate_TextChanged"/>
                     <TextBlock x:Name="label3" Text="帧率"/>
                 </DockPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,5" Visibility="Collapsed">
