--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/DisplaySpectrum.xaml
@@ -75,10 +75,22 @@
                         </DockPanel>
                         <StackPanel Margin="0,0,0,5">
                             <UniformGrid Columns="2">
-                                <CheckBox Content="{x:Static properties:Resources.AutoIntegra}"  IsChecked="{Binding DisplayConfig.IsAutoIntTime}"/>
-                                <CheckBox Content="ND"  IsChecked="{Binding Config.IsWithND}"/>
-                                <CheckBox Content="{x:Static properties:Resources.AutoZeroCalibration}"  IsChecked="{Binding Config.IsAutoDark}"/>
-                                <CheckBox Content="{x:Static properties:Resources.AdaptiveZeroCalibration}" IsChecked="{Binding Config.IsShutter}"/>
+                                <DockPanel Margin="0,0,0,2">
+                                    <CheckBox IsChecked="{Binding DisplayConfig.IsAutoIntTime}" Margin="0,0,5,0"/>
+                                    <TextBlock Text="{x:Static properties:Resources.AutoIntegra}"/>
+                                </DockPanel>
+                                <DockPanel Margin="0,0,0,2">
+                                    <CheckBox IsChecked="{Binding DisplayConfig.IsWithND}" Margin="0,0,5,0"/>
+                                    <TextBlock Text="ND"/>
+                                </DockPanel>
+                                <DockPanel Margin="0,0,0,2">
+                                    <CheckBox IsChecked="{Binding DisplayConfig.IsAutoDark}" Margin="0,0,5,0"/>
+                                    <TextBlock Text="{x:Static properties:Resources.AutoZeroCalibration}"/>
+                                </DockPanel>
+                                <DockPanel Margin="0,0,0,2">
+                                    <CheckBox IsChecked="{Binding DisplayConfig.IsShutter}" Margin="0,0,5,0"/>
+                                    <TextBlock Text="{x:Static properties:Resources.AdaptiveZeroCalibration}"/>
+                                </DockPanel>
                             </UniformGrid>
                         </StackPanel>
                         <DockPanel Visibility="{Binding  DisplayConfig.IsLuminousFluxMode,Converter={StaticResource bool2VisibilityConverter}}">
@@ -130,8 +142,8 @@
                                 </Button>
 
                             </DockPanel>
-    
-                            <DockPanel Margin="0,2" Visibility="{Binding Config.IsWithND,Converter={StaticResource bool2VisibilityConverter}}">
+
+                            <DockPanel Margin="0,2" Visibility="{Binding DisplayConfig.IsWithND,Converter={StaticResource bool2VisibilityConverter}}">
                                 <Button  DockPanel.Dock="Right" Content="Get"  Click="GetNDport_Click" />
                                 <Button  DockPanel.Dock="Right" Content="{x:Static properties:Resources.ChangeNDPort}"  Click="NDport_Click" />
                                 <TextBlock Text="NDPort" />
